setting up cdi-tomee + fixing tomee webapp - was broken cause of a CDI (spec) regression + few unused imports