@@ -22,331 +22,159 @@
     <groupId>org.apache.openejb</groupId>
     <version>5.0.0-SNAPSHOT</version>
   </parent>
+
   <modelVersion>4.0.0</modelVersion>
   <artifactId>cdi-tomee</artifactId>
-  <packaging>jar</packaging>
   <name>OpenEJB :: TCK :: CDI TomEE</name>
-
-  <properties>
-    <openejb.home>${project.build.directory}${file.separator}apache-tomee-${tomee.classifier}-${tomee.version}
-    </openejb.home>
-    <openejb.deployer.jndiname>openejb/DeployerBusinessRemote</openejb.deployer.jndiname>
-    <org.jboss.testharness.spi.Containers>org.apache.openejb.tck.impl.ContainersImplTomEE</org.jboss.testharness.spi.Containers>
-    <suiteXmlFile>src/test/resources/passing.xml</suiteXmlFile>
-  </properties>
 
   <dependencies>
     <dependency>
-      <groupId>org.apache.openejb</groupId>
-      <artifactId>openejb-core</artifactId>
-      <version>${openejb.version}</version>
-    </dependency>
-    <dependency> <!-- for TomEERuntimeException -->
-      <groupId>org.apache.openejb</groupId>
-      <artifactId>tomee-catalina</artifactId>
-      <version>${tomee.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.openejb</groupId>
-      <artifactId>webdeployer</artifactId>
-      <version>${openejb.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <scope>test</scope>
-    </dependency>
-    <!--<dependency>-->
-      <!--<groupId>org.apache.openejb</groupId>-->
-      <!--<artifactId>apache-tomee</artifactId>-->
-      <!--<type>zip</type>-->
-      <!--<version>${tomee.version}</version>-->
-      <!--<classifier>webprofile</classifier>-->
-    <!--</dependency>-->
-    <!--<dependency>-->
-      <!--<groupId>org.apache.openejb</groupId>-->
-      <!--<artifactId>apache-tomee</artifactId>-->
-      <!--<type>zip</type>-->
-      <!--<version>${tomee.version}</version>-->
-      <!--<classifier>plus</classifier>-->
-    <!--</dependency>-->
-    <!--<dependency>-->
-      <!--<groupId>org.apache.openejb</groupId>-->
-      <!--<artifactId>apache-tomee</artifactId>-->
-      <!--<type>zip</type>-->
-      <!--<version>${tomee.version}</version>-->
-      <!--<classifier>plume</classifier>-->
-    <!--</dependency>-->
-    <dependency>
-      <groupId>org.apache.tomcat</groupId>
-      <artifactId>tomcat-jasper-el</artifactId>
-      <version>${tomcat.version}</version>
+      <groupId>org.apache.myfaces.core</groupId>
+      <artifactId>myfaces-api</artifactId>
+      <version>${myfaces.version}</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>org.apache.openejb</groupId>
-      <artifactId>tck-common</artifactId>
-      <version>${openejb.version}</version>
+      <artifactId>javaee-api</artifactId>
+      <version>${javaee-api.version}</version>
+      <scope>provided</scope>
     </dependency>
     <dependency>
-      <groupId>org.jboss.jsr299.tck</groupId>
-      <artifactId>jsr299-tck-impl</artifactId>
-      <version>1.0.4.SP1</version>
-      <exclusions>
-        <exclusion>
-          <groupId>org.testng</groupId>
-          <artifactId>testng</artifactId>
-        </exclusion>
-        <exclusion>
-          <groupId>org.jboss.ejb3</groupId>
-          <artifactId>jboss-ejb3-api</artifactId>
-        </exclusion>
-      </exclusions>
+      <groupId>org.apache.openejb</groupId>
+      <artifactId>apache-tomee</artifactId>
+      <version>${tomee.version}</version>
+      <type>zip</type>
+      <classifier>plus</classifier>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.jboss.shrinkwrap.descriptors</groupId>
+      <artifactId>shrinkwrap-descriptors-impl-javaee</artifactId>
+      <version>2.0.0-alpha-3</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.jboss.arquillian.testng</groupId>
+      <artifactId>arquillian-testng-container</artifactId>
+      <version>${version.arquillian}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.openejb</groupId>
+      <artifactId>arquillian-tomee-remote</artifactId>
+      <version>${tomee.version}</version>
+      <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.testng</groupId>
       <artifactId>testng</artifactId>
       <scope>test</scope>
     </dependency>
-    <dependency> <!-- useless but so cool for debug purposes -->
-      <groupId>org.apache.tomcat</groupId>
-      <artifactId>tomcat-catalina</artifactId>
-      <version>${tomcat.version}</version>
+    <dependency>
+      <groupId>org.apache.openwebbeans</groupId>
+      <artifactId>openwebbeans-porting</artifactId>
+      <version>${org.apache.openwebbeans.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.openejb</groupId>
+      <artifactId>openejb-core</artifactId>
+      <version>${project.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.openejb</groupId>
+      <artifactId>tck-common</artifactId>
+      <version>${openejb.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.jboss.cdi.tck</groupId>
+      <artifactId>cdi-tck-impl</artifactId>
+      <version>1.2.4.Final</version>
+      <exclusions>
+        <exclusion>
+          <groupId>javax.enterprise</groupId>
+          <artifactId>cdi-api</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>javax.faces</groupId>
+          <artifactId>jsf-api</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>javax.servlet</groupId>
+          <artifactId>javax.servlet-api</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>javax.servlet.jsp</groupId>
+          <artifactId>jsp-api</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>javax.transaction</groupId>
+          <artifactId>jta</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+
+    <!-- debugging -->
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-jcs-jcache</artifactId>
+      <version>${jcs.version}</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
+
   <build>
-    <resources>
-      <resource>
-        <directory>src/main/resources</directory>
+    <testResources>
+      <testResource>
+        <directory>src/test/resources</directory>
         <filtering>true</filtering>
-      </resource>
-    </resources>
+      </testResource>
+    </testResources>
     <plugins>
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
-        <artifactId>build-helper-maven-plugin</artifactId>
-         <executions>
+        <artifactId>exec-maven-plugin</artifactId>
+        <version>1.3.2</version>
+        <executions>
           <execution>
-            <id>reserve-network-port</id>
-            <phase>pre-integration-test</phase>
+            <id>dump-porting</id>
+            <phase>test-compile</phase>
             <goals>
-              <goal>reserve-network-port</goal>
+              <goal>java</goal>
             </goals>
             <configuration>
-              <portNames>
-                <portName>tomee.ssl.port</portName>
-                <portName>tomee.ajp.port</portName>
-                <portName>tomee.http.port</portName>
-                <portName>tomee.shutdown.port</portName>
-              </portNames>
+              <mainClass>org.apache.openejb.tck.cdi.tomee.EnrichmentDumper</mainClass>
+              <classpathScope>test</classpathScope>
+              <arguments>
+                <argument>${project.build.directory}/dependency/lib/</argument>
+              </arguments>
             </configuration>
           </execution>
         </executions>
       </plugin>
-
-	  <plugin>
+      <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.18</version>
         <configuration>
-		  <useFile>false</useFile>
-		  <disableXmlReport>true</disableXmlReport>
-        </configuration>
-      </plugin>
-
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-dependency-plugin</artifactId>
-        <executions>
-          <execution>
-            <id>unpack</id>
-            <phase>pre-integration-test</phase>
-            <goals>
-              <goal>unpack</goal>
-            </goals>
-            <configuration>
-              <artifactItems>
-                <artifactItem>
-                  <groupId>org.apache.openejb</groupId>
-                  <artifactId>apache-tomee</artifactId>
-                  <version>${tomee.version}</version>
-                  <type>zip</type>
-                  <classifier>${tomee.classifier}</classifier>
-                  <outputDirectory>${project.build.directory}</outputDirectory>
-                </artifactItem>
-              </artifactItems>
-            </configuration>
-          </execution>
-          <execution>
-            <id>copy</id>
-            <phase>pre-integration-test</phase>
-            <goals>
-              <goal>copy</goal>
-            </goals>
-            <configuration>
-              <artifactItems>
-                <artifactItem>
-                  <groupId>org.apache.openejb</groupId>
-                  <artifactId>webdeployer</artifactId>
-                  <version>${project.version}</version>
-                  <outputDirectory>${openejb.home}/lib</outputDirectory>
-                </artifactItem>
-                <artifactItem>
-                  <groupId>org.apache.openejb</groupId>
-                  <artifactId>tck-common</artifactId>
-                  <version>${project.version}</version>
-                  <outputDirectory>${project.build.directory}/dependency/lib</outputDirectory>
-                </artifactItem>
-                <artifactItem>
-                  <groupId>org.apache.openejb</groupId>
-                  <artifactId>cdi-tomee</artifactId>
-                  <version>${project.version}</version>
-                  <outputDirectory>${project.build.directory}/dependency/lib</outputDirectory>
-                </artifactItem>
-              </artifactItems>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
-      <!-- TomEE embedds a lot of applications in. We should remove all not necessary web
-           application for TCK (ie. all but openejb and ROOT -->
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-antrun-plugin</artifactId>
-        <executions>
-          <execution>
-            <id>remove-apps</id>
-            <phase>pre-integration-test</phase>
-            <goals>
-              <goal>run</goal>
-            </goals>
-            <configuration>
-              <target>
-                <delete dir="${openejb.home}/webapps/ROOT" />
-                <delete dir="${openejb.home}/webapps/docs" />
-                <delete dir="${openejb.home}/webapps/manager" />
-                <delete dir="${openejb.home}/webapps/host-manager" />
-                <replace file="${openejb.home}/conf/server.xml" token="8080" value="${tomee.http.port}" />
-                <replace file="${openejb.home}/conf/server.xml" token="8443" value="${tomee.ssl.port}" />
-                <replace file="${openejb.home}/conf/server.xml" token="8005" value="${tomee.shutdown.port}" />
-                <replace file="${openejb.home}/conf/server.xml" token="8009" value="${tomee.ajp.port}" />
-              </target>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-failsafe-plugin</artifactId>
-        <configuration>
+          <reuseForks>true</reuseForks>
+          <forkCount>1</forkCount>
+          <useFile>false</useFile>
+          <disableXmlReport>true</disableXmlReport>
           <suiteXmlFiles>
-            <suiteXmlFile>${suiteXmlFile}</suiteXmlFile>
-            <!--<suiteXmlFile>src/test/resources/failing.xml</suiteXmlFile>-->
+            <suiteXmlFile>src/test/resources/passing.xml</suiteXmlFile>
           </suiteXmlFiles>
-          <argLine>-Xmx768m -XX:PermSize=64m -XX:MaxPermSize=512m -XX:ReservedCodeCacheSize=64m -Xss2048k</argLine>
-          <systemPropertyVariables>
-            <org.jboss.testharness.standalone>false</org.jboss.testharness.standalone>
-            <org.jboss.testharness.runIntegrationTests>true</org.jboss.testharness.runIntegrationTests>
-            <org.jboss.testharness.container.forceRestart>true</org.jboss.testharness.container.forceRestart>
-            <org.jboss.testharness.libraryDirectory>${project.build.directory}/dependency/lib</org.jboss.testharness.libraryDirectory>
-            <org.jboss.testharness.host>127.0.0.1:${tomee.http.port}</org.jboss.testharness.host>
-            <!--<org.jboss.testharness.outputDirectory>target</org.jboss.testharness.outputDirectory>-->
-            <deleteArtifacts>true</deleteArtifacts>
-
-            <!--<maven.failsafe.debug>true</maven.failsafe.debug>-->
-            <!--<openejb.server.debug>true</openejb.server.debug>-->
-            <java.naming.provider.url>http://127.0.0.1:${tomee.http.port}/tomee/ejb</java.naming.provider.url>
-            <connect.tries>90</connect.tries>
-            <server.http.port>${tomee.http.port}</server.http.port>
-            <server.shutdown.port>${tomee.shutdown.port}</server.shutdown.port>
-            <java.opts>-Xmx768m -XX:PermSize=64m -XX:MaxPermSize=512m -XX:ReservedCodeCacheSize=64m -Xss2048k</java.opts>
-            <openejb.home>${openejb.home}</openejb.home>
-            <openejb.deployer.jndiname>${openejb.deployer.jndiname}</openejb.deployer.jndiname>
-            <org.jboss.testharness.spi.Containers>${org.jboss.testharness.spi.Containers}
-            </org.jboss.testharness.spi.Containers>
-          </systemPropertyVariables>
+          <properties>
+            <property>
+              <name>usedefaultlisteners</name>
+              <value>false</value>
+            </property>
+          </properties>
         </configuration>
-        <executions>
-          <execution>
-            <id>integration-test</id>
-            <phase>integration-test</phase>
-            <goals>
-              <goal>integration-test</goal>
-            </goals>
-          </execution>
-          <execution>
-            <id>verify</id>
-            <phase>verify</phase>
-            <goals>
-              <goal>verify</goal>
-            </goals>
-          </execution>
-        </executions>
       </plugin>
     </plugins>
   </build>
-
-
-  <profiles>
-    <profile>
-      <id>webapp-deployer</id>
-      <properties>
-        <org.jboss.testharness.spi.Containers>org.apache.openejb.tck.impl.FullRestartContainer</org.jboss.testharness.spi.Containers>
-        <!--suiteXmlFile>src/test/resources/webapps-passing.xml</suiteXmlFile-->
-      </properties>
-    </profile>
-
-    <profile>
-      <id>webprofile</id>
-      <activation>
-        <activeByDefault>true</activeByDefault>
-      </activation>
-      <properties>
-        <tomee.classifier>webprofile</tomee.classifier>
-      </properties>
-      <dependencies>
-        <dependency>
-          <groupId>org.apache.openejb</groupId>
-          <artifactId>apache-tomee</artifactId>
-          <type>zip</type>
-          <version>${tomee.version}</version>
-          <classifier>${tomee.classifier}</classifier>
-        </dependency>
-      </dependencies>
-    </profile>
-
-    <profile>
-      <id>plus</id>
-      <properties>
-        <tomee.classifier>plus</tomee.classifier>
-      </properties>
-      <dependencies>
-        <dependency>
-          <groupId>org.apache.openejb</groupId>
-          <artifactId>apache-tomee</artifactId>
-          <type>zip</type>
-          <version>${tomee.version}</version>
-          <classifier>${tomee.classifier}</classifier>
-        </dependency>
-      </dependencies>
-    </profile>
-
-    <profile>
-      <id>plume</id>
-      <properties>
-        <tomee.classifier>plume</tomee.classifier>
-      </properties>
-      <dependencies>
-        <dependency>
-          <groupId>org.apache.openejb</groupId>
-          <artifactId>apache-tomee</artifactId>
-          <type>zip</type>
-          <version>${tomee.version}</version>
-          <classifier>${tomee.classifier}</classifier>
-        </dependency>
-      </dependencies>
-    </profile>
-
-  </profiles>
-
 </project>
